app/assets/stylesheets/ui-customizations.css.scss
/* ... */
.btn-primary:not(.btn-link):not(.btn-flat), .togglebutton label input[type="checkbox"]:first-child:checked + .toggle::after {
  background: $blue;
}

#bottom-fade {
  position:absolute;
  width:100%;
  bottom:49px;
  background-image:linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);
  background-repeat:repeat-x;
  height:200px;
}

.hc-image-zoom-button-outer .btn {
  padding: 8px;
}

.container-fluid {
  padding: 0;
}

.bee-page-content {
  padding: 0;

  .row {
    margin-top: 15px;
  }
}

.modal-content {
  background: #333;
  color: $white;
  height: 100%;
}

#banner {
  width: 100%;

  p {
    margin: 0;
  }
}

.bee-homepage-banner {
  background-image: image_url("home.jpg");
  background-position: left top;
  background-repeat: no-repeat;
  background-size: cover;
  -webkit-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);
  -moz-box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);
  box-shadow: 0px 2px 10px 5px rgba(0,0,0,0.65);
  margin-bottom: 60px;
  min-height: 450px;
  position: relative;

  .banner-inner {
    margin: 0 auto;
    padding: 60px;
    width: 100%;
  }

  h1 {
    background-image: image_url("dc.logo.png");
    background-size: cover;
    height: 0;
    margin: 0;
    overflow: hidden;
    padding-top: 166px;
    width: 400px;
  }

  h3 {
    background-image: image_url("powered.png");
    background-size: cover;
    bottom: 60px;
    height: 0;
    margin: 0;
    overflow: hidden;
    padding-top: 57px;
    position: absolute;
    right: 60px;
    width: 200px;
  }
}

.modal-header {
  padding: 0 !important;
  min-height: 0;

  button.close {
    z-index: 200;
    position: absolute;
    top: 10px;
    right: 10px;
    opacity: .7;
    border: solid 1px $white;
    border-radius: 3px;
    padding: 5px;

    i {
      color: $white;
      font-size: 20px;
      text-shadow: 1px 1px 1px #000;
    }
  }

  button.close:hover {
    opacity: .9;
  }
}

.modal .modal-dialog {
  transition: none;
  transform: scale(0.8, 0.8);
}

.modal.in .modal-dialog, .modal.out .modal-dialog {
  transform: none !important;
  transition: none;
  transform: scale(1, 1);
}

.loading {
  text-align: center;
}

.item-detail {

  h2 {
    margin-bottom: 20px;
    text-shadow: 1px 1px 1px #000;
  }
}

.items-list {
  margin-top: 20px;
}

.btn-details {
  position: absolute;
  right: 2.8em;
  top: 4.5em;
  margin: 0;
  z-index: 200;
}

.details {
  position: absolute;
  right: 2.8em;
  top: 7em;
  transition-property: width, height;
  transition-duration: .3s;
  overflow-y: scroll;
  background: rgba(244, 244, 244, 0.8);
  border-radius: 4px;
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
  max-width: 350px;
  z-index: 2;

  .well {
    background: transparent;
    box-shadow: none;
  }

  .metadata-list {

    dt {
      margin-bottom: .3em;
      font-size: 15px;
      font-family: serif;
      color: $darkgrey;
    }

    dd {
      font-size: 13px;
      color: $darkgrey;
    }
  }
}

.about-collection {
  background: rgba(244, 244, 244, 0.8);
  border-radius: 4px;
  color: $darkgrey;
  padding:15px;

  h2 {
    font-size:18px;
  }

  h3 {
    font-size:15px;
    font-family: serif;
    font-weight: 500;
    margin-bottom:0;
  }
}

.modal-lg {
  width: 100%;
}

.modal-dialog {
  position: fixed;
}

#copy, #info {

  .modal-header {
    height: 30px;
  }

  .modal-dialog {
    bottom: 50px;
    position: absolute;
    width: 20% !important;
    left: 0;
    margin: 0;
    height: auto !important;

    button.close {
      top: 12px;
    }
  }
}

.overflow-ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* openseadragon */
.os-toolbar {
  position: absolute !important;
  z-index: 100;

  a {
    color: white;
    margin-right: 8px;

    &:hover {
      text-decoration: none;
      color: white;
    }
  }

  i {
    text-shadow: 1px 1px 1px #000;
  }
}

.openseadragon-container {
  z-index: 1;
}

.col-sm-6 {
  float: left;
  width: 50%;
}

.navbar-left {
  float: left !important;
}

.bee-browse-exhibit h2 a {
  color: $white;
}

@import "cards.css.scss";
@import "collection.css.scss";
@import "showcase.css.scss";
@import "theme-light.css.scss";

@import "_material-design-overwrites.scss";

// media-query stylesheet
@import "_media-medium.css.scss";
@import "_media-small.css.scss";

